--- a/Assignment 3/Task 1/app/src/main/AndroidManifest.xml
+++ b/Assignment 3/Task 1/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".order_complete"
+            android:exported="false" />
+        <activity
             android:name=".booking_page"
             android:exported="false" />
         <activity
