--- a/ShopNow/app/src/main/AndroidManifest.xml
+++ b/ShopNow/app/src/main/AndroidManifest.xml
@@ -10,9 +10,18 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.ShopNow"
         android:supportsRtl="true"
+        android:theme="@style/Theme.ShopNow"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.ProductDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
