--- a/ShopNowSeller/app/src/main/AndroidManifest.xml
+++ b/ShopNowSeller/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.ShopNowSeller"
         tools:targetApi="31">
         <activity
+            android:name=".activity.OrderDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.OrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.EditActivity"
             android:exported="false" />
         <activity
