--- a/ShopNow/app/build.gradle
+++ b/ShopNow/app/build.gradle
@@ -51,10 +51,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.google.firebase:firebase-analytics:21.3.0'
 }
