--- a/ShopNowSeller/app/src/main/AndroidManifest.xml
+++ b/ShopNowSeller/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
         android:theme="@style/Theme.ShopNowSeller"
         tools:targetApi="31">
         <activity
-            android:name=".activity.OrderDetailActivity"
+            android:name=".activity.AddActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.OrderActivity"
+            android:name=".activity.OrderDetailActivity"
             android:exported="false" />
         <activity
             android:name=".activity.EditActivity"
